# shared-dotfiles

./: arch-install.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml
shared_dotfiles/: backlight.py  change_theme.py  detect_display.py  lock.py  python_helper.py  set_desktops.py  toggle_app.py  toggle_calc.py  toggle_obsidian.py
